Fixed TFWrapper race condition